<resources>
    <string name="app_name">Papeleria planet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">papeleria planet</string>
    <string name="nav_header_subtitle">mmaldonadoj@toluca.tecnm.mx</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_listar">Ver articulos</string>
    <string name="menu_listar2">Ver articulos pedidos</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_eliminar">Borrar</string>
    <string name="menu_crear">Agregar articulo</string>
    <string name="nuevo">Añadir articulo</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre</string>
    <string name="fechacaducidad">Fecha</string>
    <string name="TotalInv">cantidad</string>
    <string name="precio">Precio</string>
    <string name="gramos">peso</string>
    <string name="genero">categoria</string>
    <string name="area">Area</string>
    <string name="doctor">Doctor</string>
    <string name="limpiar">Limpiar</string>
    <string name="descripciondulce">Descripción</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="descripcion">Imagen Paciente</string>
    <string name="creditos">Acerca de</string>
    <string name="universidad">Instituto Tecnologico de Toluca</string>
    <string name="especialidad">Ingenieria en TICS</string>
    <string name="alumno">Monserrat Maldonado Jimenez</string>
    <string name="profesor">Maestra Rocio Elizabeth Pulido Alba</string>
    <string name="clase">Mar Jue 15-17 hrs</string>
    <string name="version">Version 1.0 2022</string>
<string name="infoPaciente">Informacion del paciente</string>

</resources>