<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.eliminar.EliminarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/frageliminarid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Eliminar producto"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ImageView
            android:id="@+id/frageliminarFoto"
            android:layout_width="190dp"
            android:layout_height="113dp"
            android:layout_gravity="center"
            android:contentDescription="@string/descripcion"
            tools:srcCompat="@drawable/papeplanet" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frageliminarBusqueda"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/id"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/frageliminarbtnbuscar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#FFE600"
                android:backgroundTint="@color/pink"
                android:text="@string/buscar" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <TextView
            android:id="@+id/frageliminarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/nombre"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/frageliminarDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/descripciondulce"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/frageliminarTipoDulce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="Tipo de Dulce"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/frageliminarFechaCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/fechacaducidad"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/frageliminarGramos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/gramos"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/frageliminarPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/precio"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/frageliminarTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/TotalInv"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/frageliminarStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="Status"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fragelimbtnLimpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFE600"
                android:backgroundTint="@color/pink"
                android:text="@string/limpiar"
                android:textSize="16sp" />

            <Space
                android:layout_width="7dp"
                android:layout_height="34dp" />

            <Button
                android:id="@+id/fragelimbtnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFE600"
                android:backgroundTint="@color/pink"
                android:text="@string/menu_eliminar"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>