<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.busqueda.BuscarFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="25dp">

        <TextView
            android:id="@+id/fragbuscarid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Buscar "
            android:textColor="@color/pink"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ImageView
            android:id="@+id/fragbuscarFoto"
            android:layout_width="190dp"
            android:layout_height="96dp"
            android:layout_gravity="center"

            tools:srcCompat="@drawable/papeplanet" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragbuscarBusqueda"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/id"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/fragbuscarbtnbuscar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#FFE600"
                android:backgroundTint="@color/pink"
                android:text="@string/buscar" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <TextView
            android:id="@+id/fragbuscarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:background="@drawable/border"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/fragbuscarDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/descripciondulce"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/fragbuscarTipoDulce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="Producto"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/fragbuscarFechaCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fechacaducidad"
            android:background="@drawable/border"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/fragbuscarGramos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gramos"
            android:background="@drawable/border"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/fragbuscarPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:background="@drawable/border"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/fragbuscarTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TotalInv"
            android:background="@drawable/border"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/fragbuscarStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Status"
            android:background="@drawable/border"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>